feat: 添加 AI 图表生成、意图驱动架构和执行链路追踪

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@excalidraw/excalidraw": "^0.18.0",
+    "@excalidraw/mermaid-to-excalidraw": "^2.0.0",
     "@hookform/resolvers": "^3.3.4",
     "@llamaindex/openai": "^0.4.22",
     "@llamaindex/readers": "^3.1.21",
