--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "llamaindex": "^0.12.1",
     "lucide-react": "^0.344.0",
     "mammoth": "^1.6.0",
+    "meilisearch": "^0.54.0",
     "next": "14.2.15",
     "next-auth": "^4.24.5",
     "pdf-parse": "^1.1.1",
