--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-force-graph-2d": "^1.29.0",
     "react-hook-form": "^7.49.3",
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.2.1",
