feat: 构建代码知识库

--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@llamaindex/openai": "^0.4.22",
     "@llamaindex/readers": "^3.1.21",
     "@prisma/client": "^5.22.0",
+    "adm-zip": "^0.5.16",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "fs-extra": "^11.2.0",
+    "isomorphic-git": "^1.36.1",
     "llamaindex": "^0.12.1",
     "lucide-react": "^0.344.0",
     "mammoth": "^1.6.0",
@@ -32,17 +34,20 @@
     "react-force-graph-2d": "^1.29.0",
     "react-hook-form": "^7.49.3",
     "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^16.1.0",
     "tailwind-merge": "^2.2.1",
     "typescript": "^5.3.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.5.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.11.5",
     "@types/pdf-parse": "^1.1.4",
-    "@types/react": "^18.3.0",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.2.25",
